# AutoTwitchDrops

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  streamers.txt
AutoTwitchDrops/: __init__.py  main.py  settings.py  streamers.txt
tests/: test_AutoTwitchDrops.py
