[tool.poetry]
name = "AutoTwitchDrops"
version = "0.1.0"
description = "A minimalist bot that gets Twitch drops for you written in pure Python."
authors = ["Trevor White"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
async_generator = "1.10"
attrs = "21.4.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
cryptography = "36.0.2"
h11 = "0.13.0"
idna = "3.3"
outcome = "1.1.0"
pycparser = "2.21"
pyOpenSSL = "22.0.0"
PySocks = "1.7.1"
requests = "2.27.1"
selenium = "4.1.3"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
trio = "0.20.0"
trio-websocket = "0.9.2"
urllib3 = "1.26.9"
webdriver-manager = "3.5.4"
wsproto = "1.1.0"
black = "^22.3.0"
pylint = "^2.13.7"
mypy = "^0.942"
isort = "^5.10.1"


[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
